Fix text-align in footer__text

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ body {
 
 .footer__text {
   color: var(--color-muted);
-  text-align: left;
+  text-align: center;
 }
 
 .footer__menu {
